# type_name_pp

./: .appveyor.yml  .gitmodules  README.md  meson.build  type_name_pp.hpp
subprojects/: ntbs.wrap
test/: sanity_check.cpp  type_name_pp.cpp
